--- a/css/teszt.css
+++ b/css/teszt.css
@@ -91,6 +91,7 @@ body:has(.left.expanded) {
     transition: background-color 0.3s ease;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .left .material-symbols-outlined {
@@ -132,53 +133,13 @@ body:has(.left.expanded) {
     opacity: 1; /* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
 }
 
-
-body.dark-mode {
-    background-color: black;
-    color: white;
-}
-
-body.dark-mode .top-left, body.dark-mode .top, body.dark-mode .left {
-    background-color: #000;
-    box-shadow: 1px 0 5px rgb(0, 0, 0);
-}
-
-body.dark-mode .top-left {
-    box-shadow: none;
-}
-
-body.dark-mode .top h1 {
-    color: white;
-}
-
-body.dark-mode .left hr {
-    background-color: white;
-}
-
-body.dark-mode .main {
-    background-color: #1a1a1a;
-}
-
-body.dark-mode .material-symbols-outlined {
-    color: white;
-}
-
-body.dark-mode .material-symbols-outlined:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-body.dark-mode .material-symbols-outlined::after {
-    background-color: white;
-    color: black;
-}
-
 .PostDiv {
     width: 80%;
     height: 94%;
     margin-left: 15%;
     margin-right: 15%;
     display: grid;
-    grid-template-columns: 255px 840px;
+    grid-template-columns: 290px 840px;
     grid-template-rows: repeat(5, 1fr);
     margin-top: 30px;
     background: none;
@@ -194,6 +155,15 @@ body.dark-mode .material-symbols-outlined::after {
     transition: background-color 0.3s ease;
 }
 
+.Post {
+    background-color: rgb(211, 211, 211);
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    transition: background-color 0.3s ease;
+}
+
 .leftSideDiv {
     grid-row: 1/6;
     grid-column: 1/2;
@@ -204,25 +174,6 @@ body.dark-mode .material-symbols-outlined::after {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-}
-
-body.dark-mode .leftSideDiv {
-    background-color: rgb(12, 12, 12);
-    border-right: 1px solid rgba(255, 255, 255, 0.05);
-}
-
-.Post {
-    background-color: rgb(211, 211, 211);
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    transition: background-color 0.3s ease;
-}
-
-body.dark-mode .Post {
-    background-color: rgb(12, 12, 12);
-    box-shadow: 2px 2px 7px 2px rgba(255, 255, 255, 0.05);
 }
 
 .Content {
@@ -344,10 +295,6 @@ body.dark-mode .Posts {
     border-radius: 4px;
 }
 
-.dark-mode .comment-area::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
 .comment-area:focus {
     background-color: rgb(200, 200, 200);
 }
@@ -381,27 +328,6 @@ body.dark-mode .Posts {
 .send-button img {
     width: 25px;
     height: 25px;
-}
-
-/* Dark mode adjustments */
-.dark-mode .Post,
-.dark-mode .comment-area {
-    background-color: #333;
-    border-color: white;
-    color: white;
-}
-
-.dark-mode .Head span,
-.dark-mode .text,
-.dark-mode .mentions,
-.dark-mode .comment-area,
-.dark-mode .comment-area::placeholder {
-    color: white;
-}
-
-.dark-mode .more-icon:hover,
-.dark-mode .send-button:hover {
-    background-color: rgba(255, 255, 255, 0.1);
 }
 
 ::placeholder {
@@ -450,14 +376,6 @@ body.dark-mode .Posts {
     transition: transform 0.3s ease;
 }
 
-.dark-mode .toggle-button {
-    background-color: #333;
-}
-
-.dark-mode .toggle-button span {
-    color: white;
-}
-
 /* From Uiverse.io by deepak16375 */ 
 .searchBar {
     display: flex;
@@ -465,7 +383,7 @@ body.dark-mode .Posts {
     height: 35px;
     width: 100%; /* Ensure it takes the full width of its container */
     box-sizing: border-box; /* Include padding and border in the element's total width */
-    padding: 0 10px; /* Add padding if needed */
+
 }
 
 .input {
