--- a/css/teszt.css
+++ b/css/teszt.css
@@ -75,6 +75,10 @@ body:has(.left.expanded) {
     box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
     z-index: 1;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .left hr {
@@ -92,6 +96,7 @@ body:has(.left.expanded) {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px 0px 20px 0px;
 }
 
 .left .material-symbols-outlined {
@@ -102,7 +107,7 @@ body:has(.left.expanded) {
     width: 100%;
     height: 50px;
     transition: background-color 0.5s ease, color 0.3s ease;
-    position: relative;
+    overflow: hidden;
 }
 
 .left .material-symbols-outlined:hover {
@@ -135,13 +140,12 @@ body:has(.left.expanded) {
 
 .PostDiv {
     width: 80%;
-    height: 94%;
+    height: 100%;
     margin-left: 15%;
     margin-right: 15%;
     display: grid;
     grid-template-columns: 290px 840px;
     grid-template-rows: repeat(5, 1fr);
-    margin-top: 30px;
     background: none;
 }   
 
@@ -153,6 +157,7 @@ body:has(.left.expanded) {
     height: 100%;
     overflow-y: auto;
     transition: background-color 0.3s ease;
+    overflow: hidden;
 }
 
 .Post {
@@ -256,6 +261,8 @@ body.dark-mode .Posts {
     margin-top: 20px;
     padding-top: 15px;
     border-top: 1px solid black;
+    display: none;
+    transition: all 0.3s ease-in-out;
 }
 
 .comment-wrapper {
