--- a/css/teszt.css
+++ b/css/teszt.css
@@ -307,9 +307,6 @@ body:has(.left.expanded) {
     grid-area: main;
     background-color: #f0f0f0;
     transition: background-color 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 20px 0px 20px 0px;
 }
 
@@ -355,17 +352,16 @@ body:has(.left.expanded) {
 .PostDiv {
     width: 80%;
     height: 100%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: auto;
     display: grid;
-    grid-template-columns: 290px 840px;
+    grid-template-columns: 840px 290px;
     grid-template-rows: repeat(5, 1fr);
     background: none;
 }   
 
 .Posts {
     grid-row: 1/6;
-    grid-column: 2/3;
+    grid-column: 1/2;
     background-color: rgb(226, 226, 226);
     padding: 20px;
     height: 100%;
@@ -385,14 +381,14 @@ body:has(.left.expanded) {
 
 .leftSideDiv {
     grid-row: 1/6;
-    grid-column: 1/2;
+    grid-column: 2/3;
     background-color: rgb(226, 226, 226);
     transition: background-color 0.3s ease;
     padding: 20px;
-    border-right: 1px solid rgba(0, 0, 0, 0.05);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    border-left: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .Content {
