--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -640,3 +640,86 @@ body:has(.left.expanded) {
 .input:focus {
     outline: none;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.profileInformation {
+  display: grid;
+  grid-template-columns: 840px 290px;
+  background-color: rgb(226, 226, 226);
+}
+
+.segitseg {
+  grid-column: 1/2;
+  padding: 20px;
+}
+
+.userProfile {
+  display: grid;
+  grid-template-columns: repeat(8, 100px);
+  grid-template-rows: repeat(4, 100px);
+  grid-column: 1/2;
+}
+
+.userFeed {
+  grid-column: 2/3;
+  padding: 20px;
+  border-left: 1px solid rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.backgroundImage {
+  z-index: 1;
+  grid-row: 1/3;
+  grid-column: 1/9;
+  background-color: black;
+}
+
+.profilePicture {
+  z-index: 2;
+  grid-row: 2/4;
+  grid-column: 4/6;
+  background-image: url('jonkler.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 6px solid rgb(226, 226, 226);
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.leftInformation {
+  grid-row: 3/4;
+  grid-column: 1/4;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin-top: 10px;
+  gap: 20px;
+}
+
+.rightInformation {
+  grid-row: 3/4;
+  grid-column: 6/9;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+
+.middleInformation {
+  grid-row: 4/5;
+  grid-column: 4/6;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+}
