--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -9,7 +9,6 @@
 
 body {
     margin: 0;
-    height: 100vh;
     display: grid;
     grid-template-columns: 50px 1fr;
     grid-template-rows: 50px 1fr;
@@ -83,9 +82,15 @@ body:has(.left.expanded) {
     gap: 20px;
 }
 
+
+.link-size {
+    width: 100%;
+    height: 100%;
+}
+
 .main {
     grid-area: main;
-    background-color: #181818;
+    background-color: #191919;
     transition: background-color 0.3s ease;
     padding: 20px 0px 20px 0px;
 }
@@ -98,16 +103,15 @@ body:has(.left.expanded) {
     width: 100%;
     height: 50px;
     overflow: hidden;
-    transition: background-color 0.5s; /* Only transition the background */
+    transition: background-color 0.4s ease;
 }
 
 .left-icons .material-symbols-outlined:hover {
-    width: 50px;
     cursor: pointer;
     transition: 0.2s;
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
-    transition: background-color 0.5s;
+    transition: background-color 0.4s ease;
 }
 
 /* Tooltip szöveg */
@@ -136,7 +140,7 @@ body:has(.left.expanded) {
     width: 50px;
     max-width: 70%;
     height: 2px;
-    background-color: #ffffff;
+    background-color: rgb(192, 192, 192);
     border: 0px solid rgb(255, 255, 255);
     transition: background-color 0.3s ease;
 }
@@ -182,7 +186,7 @@ body:has(.left.expanded) {
 .Posts {
     grid-row: 1/6;
     grid-column: 1/2;
-    background-color: rgb(24, 24, 24);
+    background-color: #191919;
     padding: 20px;
     height: 100%;
     overflow-y: auto;
@@ -191,7 +195,7 @@ body:has(.left.expanded) {
 }
 
 .Post {
-    background-color: rgb(24, 24, 24);
+    background-color: #191919;
     padding: 20px;
     margin-bottom: 20px;
     box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
@@ -244,7 +248,7 @@ body:has(.left.expanded) {
 .Comments {
     margin-top: 20px;
     padding-top: 15px;
-    border-top: 1px solid black;
+    border-top: 1px solid rgba(255, 255, 255, 0.05);
     display: none;
     transition: all 0.3s ease-in-out;
 }
@@ -259,17 +263,17 @@ body:has(.left.expanded) {
     min-height: 40px;
     max-height: 150px;
     padding: 10px 45px 10px 15px;
-    border: 1px solid black;
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 5px;
-    background-color: rgb(197, 196, 196);
+    background-color: rgb(49, 49, 49);
     resize: none;
     outline: none;
     font-family: inherit;
     font-size: 0.95em;
-    line-height: 1.4;
     box-sizing: border-box;
     overflow-y: hidden; /* A divből való "kifolyás" letiltása az y tengelyen*/
     transition: background-color 0.2s;
+    color: rgb(192, 192, 192);
 }
 
 /* A "scrollbar"-nak stílus adásához használt pseudo-element (::-webkit-scrollbar)*/
@@ -286,12 +290,8 @@ body:has(.left.expanded) {
     border-radius: 4px;
 }
 
-.comment-area:focus {
-    background-color: rgb(200, 200, 200);
-}
-
 .comment-area::placeholder {
-    color: black;
+    color: rgb(192, 192, 192);
 }
 
 .comment-controls {
@@ -327,12 +327,13 @@ body:has(.left.expanded) {
 }
 
 .send-button:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .send-button img {
     width: 25px;
     height: 25px;
+    color: rgb(192, 192, 192);
 }
 
 ::placeholder {
@@ -635,6 +636,9 @@ input[type=text]{
     cursor: pointer;
     padding: 5px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: background-color 0.2s;
 }
 
