--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -23,6 +23,7 @@ body {
         "wdth" 100;
     color: rgb(192, 192, 192);
     transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
+    background-color: blue;
 }
 
 .top-left {
