--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -309,13 +309,13 @@ body:has(.left.expanded) {
 }
 
 .main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   grid-area: main;
   background-color: #f0f0f0;
   transition: background-color 0.3s ease;
   padding: 20px 0px 20px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .left-icons .material-symbols-outlined {
@@ -413,10 +413,20 @@ body:has(.left.expanded) {
 
 .postPfp {
     border-radius: 100%;
-    height: 50px;
-    width: 50px;
     overflow: hidden; /* A divből való "kifolyás" letiltása */
     border: 2px solid black;
+    width: 65px; 
+    height: 65px; 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-image: url('../../jonkler.webp');
+}
+
+.postUsername {
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: column; gap: 5px
 }
 
 .userPostInfo {
@@ -433,11 +443,14 @@ body:has(.left.expanded) {
 }
 
 .more-icon {
-    margin-left: auto;
-    cursor: pointer;
-    padding: 8px;
-    border-radius: 50%;
-    transition: background-color 0.2s;
+  margin-left: auto;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.2s;
 }
 
 .more-icon:hover {
@@ -647,8 +660,9 @@ body:has(.left.expanded) {
 
 .profileInformation {
   display: grid;
-  grid-template-columns: 840px 290px;
+  grid-template-columns: 840px minmax(290px, auto);
   background-color: rgb(226, 226, 226);
+  height: 100%;
 }
 
 .segitseg {
@@ -676,18 +690,18 @@ body:has(.left.expanded) {
   z-index: 1;
   grid-row: 1/3;
   grid-column: 1/9;
-  background-color: black;
+  background-color: rgb(128, 128, 128);
 }
 
 .profilePicture {
   z-index: 2;
   grid-row: 2/4;
   grid-column: 4/6;
-  background-image: url('jonkler.webp');
+  background-image: url('../../jonkler.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border: 6px solid rgb(226, 226, 226);
+  border: 7px solid #E2E2E2;
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -792,12 +806,19 @@ body:has(.left.expanded) {
   margin-right: auto; 
   font-size: 20px; 
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .searchBar button {
   display: flex; 
   justify-content: center; 
   align-items: center;
+}
+
+.Head {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .userPostInfo .profilePicture {
@@ -824,3 +845,151 @@ body:has(.left.expanded) {
 .usernames .username {
   font-size: 15px;
 }
+
+.leftInformation img {
+  width: 45px; 
+  height: 45px;
+}
+
+.informationCenter {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+
+.middleInformation #birthName {
+  font-size: 22px;
+}
+
+.userProfile hr {
+  border: none;
+  background-color: rgba(0, 0, 0, 0.05); 
+  height: 1px; 
+  width: 100%; 
+  margin-top: auto; 
+  margin-bottom: auto; 
+  grid-row: 4/5; 
+  grid-column: 1/9; 
+  transform: translateY(20px);
+}
+
+.Post .text {
+  margin-top: 15px; 
+  text-align: justify;
+}
+
+.postInformation {
+  margin-top: 15px; 
+  text-align: justify; 
+  display: flex; 
+  flex-wrap: nowrap; 
+  flex-direction: row; 
+  gap: 10px
+}
+
+.likeInformation {
+  display: flex; 
+  align-items: center; 
+  gap: 5px;
+}
+
+.userProgress {
+  width: 20%; 
+  height: 100%; 
+  background-color: rgb(145, 145, 145); 
+  border-radius: 50px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  color: white;
+}
+
+.progressBar {
+  width: 100%; 
+  height: 27px; 
+  background-color: rgb(65, 65, 65); 
+  border-radius: 50px; 
+  margin-bottom: 20px; 
+  padding: 5px;
+}
+
+.toDoList {
+  display: flex; 
+  justify-content: center;
+}
+
+#recentPostHeader {
+  margin-top: 20px;
+}
+
+.recentPosts {
+  display: flex; 
+  align-items: center; 
+  background-color: rgb(211, 211, 211); 
+  padding: 10px; 
+  border-radius: 5px; 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: column;
+}
+
+.recentPosts button {
+  border: none;
+  padding: 7px;
+  width: 25%;
+  border-radius: 6px; 
+  cursor: pointer; 
+  font-size: 14px;
+  background-color: #E2E2E2; 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.user button {
+  border: none;
+  padding: 7px;
+  width: 25%;
+  border-radius: 6px; 
+  cursor: pointer; 
+  font-size: 14px;
+  background-color: #E2E2E2; 
+  box-shadow: 2px 2px 5px 1px rgba(255, 255, 255, 0.1); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.user {
+  display: flex; 
+  gap: 5px; 
+  align-items: center; 
+  width: 100%;
+}
+
+.recentPostPfp {
+  background-image: url('../../jonkler.webp'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%;
+  border: 2px solid black;
+}
+
+.Recommended {
+  display: flex; 
+  align-items: center; 
+  background-color: rgb(211, 211, 211); 
+  padding: 10px; 
+  border-radius: 5px; 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: column;
+  gap: 10px
+}
+
