--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -216,15 +216,6 @@ body {
     height: 65px;
 }
 
-.postPfp {
-    border-radius: 100%;
-    height: 50px;
-    width: 50px;
-    overflow: hidden; /* A divből való "kifolyás" letiltása */
-    border: 2px solid rgb(192, 192, 192);
-    margin-right: 3px;
-}
-
 .text {
     margin: 15px 0;
     line-height: 1.5;
@@ -703,7 +694,11 @@ input[type=text]{
   justify-content: space-around;
   align-items: flex-start;
   margin-top: 10px;
-  gap: 20px;
+}
+
+.leftInformation img {
+  width: 45px; 
+  height: 45px;
 }
 
 .rightInformation {
@@ -713,6 +708,11 @@ input[type=text]{
   justify-content: space-around;
   align-items: flex-start;
   margin-top: 10px;
+}
+
+.rightInformation img {
+  height: 45px;
+  width: 45px;
 }
 
 .middleInformation {
@@ -729,6 +729,11 @@ input[type=text]{
   display: flex; 
   align-items: center; 
   gap: 5px;
+}
+
+.commentInformation img {
+  width: 25px;
+  height: 25px;
 }
 
 .progressBar {
@@ -868,4 +873,79 @@ input[type=text]{
 
 .middleInformation #birthName {
   font-size: 22px;
+}
+
+
+.postPfp {
+  border-radius: 100%;
+  overflow: hidden; /* A divből való "kifolyás" letiltása */
+  border: 2px solid rgb(192, 192, 192);
+  width: 65px; 
+  height: 65px; 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-image: url('../../jonkler.webp');
+}
+
+.postUsername {
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: column; gap: 5px
+}
+
+.Post .text {
+  margin-top: 15px; 
+  text-align: justify;
+}
+
+.postInformation {
+  margin-top: 15px; 
+  text-align: justify; 
+  display: flex; 
+  flex-wrap: nowrap; 
+  flex-direction: row; 
+  gap: 10px
+}
+
+.likeInformation {
+  display: flex; 
+  align-items: center; 
+  gap: 5px;
+}
+
+#recentPostHeader {
+  margin-top: 20px;
+}
+
+.recentPosts {
+  display: flex; 
+  align-items: center; 
+  background-color: #191919; 
+  padding: 10px; 
+  border-radius: 5px; 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: column;
+}
+
+.recentPosts button {
+  border: none;
+  padding: 7px;
+  width: 25%;
+  border-radius: 6px; 
+  cursor: pointer; 
+  font-size: 14px;
+  background-color: #313131; 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.informationCenter {
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
