--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -166,7 +166,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    border: 6px solid #1d1d1d;
+    border: 7px solid #1d1d1d;
     width: 200px;
     height: 200px;
     border-radius: 50%;
@@ -248,6 +248,7 @@ body {
 
 .comment-area {
     width: 100%;
+    height: 40px;
     min-height: 40px;
     max-height: 150px;
     padding: 10px 45px 10px 15px;
@@ -286,7 +287,7 @@ body {
     position: absolute;
     right: 12px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-55%);
 }
 
 .Comments {
@@ -905,7 +906,8 @@ input[type=text]{
   display: flex; 
   flex-wrap: nowrap; 
   flex-direction: row; 
-  gap: 10px
+  gap: 10px;
+  justify-content: flex-end;
 }
 
 .likeInformation {
