--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -483,7 +483,7 @@ body:has(.left.expanded) {
 .Comments {
     margin-top: 20px;
     padding-top: 15px;
-    border-top: 1px solid black;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
     display: none;
     transition: all 0.3s ease-in-out;
 }
@@ -495,10 +495,11 @@ body:has(.left.expanded) {
 
 .comment-area {
     width: 100%;
+    height: 40px;
     min-height: 40px;
     max-height: 150px;
     padding: 10px 45px 10px 15px;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     background-color: rgb(197, 196, 196);
     resize: none;
@@ -537,7 +538,7 @@ body:has(.left.expanded) {
     position: absolute;
     right: 12px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-55%);
 }
 
 .Comments {
@@ -558,7 +559,7 @@ body:has(.left.expanded) {
 .send-button {
     all: unset;
     cursor: pointer;
-    padding: 6px;
+    padding: 3px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -891,7 +892,8 @@ body:has(.left.expanded) {
   display: flex; 
   flex-wrap: nowrap; 
   flex-direction: row; 
-  gap: 10px
+  gap: 10px;
+  justify-content: flex-end;
 }
 
 .likeInformation {
