commentSection div átírása, plusz ikonok hozzáadása

--- a/css/light-mode css/light-mode profile.css
+++ b/css/light-mode css/light-mode profile.css
@@ -550,10 +550,14 @@ body:has(.left.expanded) {
 .comments-toggle {
   all: unset;
   margin-top: 10px;
-
   cursor: pointer;
   font-size: 14px;
   color: #666;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
 
 .send-button {
