--- a/css/dark-mode css/dark-mode profile.css
+++ b/css/dark-mode css/dark-mode profile.css
@@ -296,12 +296,18 @@ body {
 .Comments.expanded {
   display: block;
 }
+
 .comments-toggle {
   all: unset;
   margin-top: 10px;
   cursor: pointer;
   font-size: 14px;
   color: #666;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
 
 .send-button {
