--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -388,7 +388,7 @@ body:has(.left.expanded) {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    border-left: 1px solid rgba(0, 0, 0, 0.05);
+    border-left: 1px solid rgba(255, 255, 255, 0.05);
 }
 
 .Content {
@@ -538,6 +538,7 @@ body:has(.left.expanded) {
 .Comments.expanded {
   display: block;
 }
+
 .comments-toggle {
   all: unset;
   margin-top: 10px;
@@ -545,8 +546,11 @@ body:has(.left.expanded) {
   font-size: 14px;
   color: #666;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
-
 .send-button {
   all: unset;
   cursor: pointer;
@@ -670,15 +674,6 @@ body:has(.left.expanded) {
   grid-column: 1/2;
 }
 
-.userFeed {
-  grid-column: 2/3;
-  padding: 20px;
-  border-left: 1px solid rgba(0, 0, 0, 0.05);
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
 .backgroundImage {
   z-index: 1;
   grid-row: 1/3;
@@ -730,7 +725,7 @@ body:has(.left.expanded) {
 
 .userFeed hr {
   all: unset; 
-  background-color: rgba(0, 0, 0, 0.05); 
+  background-color: rgba(255, 255, 255, 0.05); 
   width: calc(100% + 40px); 
   height: 1px; 
   margin: 20px -20px;
@@ -738,7 +733,7 @@ body:has(.left.expanded) {
 
 .rightSideDiv hr {
   all: unset; 
-  background-color: rgba(0, 0, 0, 0.05); 
+  background-color: rgba(255, 255, 255, 0.05); 
   width: calc(100% + 40px); 
   height: 1px; 
   margin: 20px -20px;
@@ -861,7 +856,7 @@ body:has(.left.expanded) {
 
 .userProfile hr {
   border: none;
-  background-color: rgba(0, 0, 0, 0.05); 
+  background-color: rgba(255, 255, 255, 0.05); 
   height: 1px; 
   width: 100%; 
   margin-top: auto; 
