Comments html létrehozása

--- a/css/dark-mode css/loginform.css
+++ b/css/dark-mode css/loginform.css
@@ -33,9 +33,9 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     padding: 20px 0px 20px 0px;
-    width: 17%;
+    width: 20%;
     height: auto;
     border-radius: 5px;
     box-shadow: 1px 0 5px rgba(0, 0, 0, 0.13);
@@ -45,10 +45,10 @@ body {
     margin: 5px auto 0px 5%;
 }
 
-input[type=text], input[type=email]{
+input[type=text], input[type=email], input[type=password]{
     outline: none;
     width: 90%;
-    height: 35px;
+    height: 2.8rem;
     border-radius: 5px;
     border: 1px solid #E2E2E2;
     padding: 10px;
@@ -56,7 +56,7 @@ input[type=text], input[type=email]{
     transition: border-color 0.3s ease;
 }
 
-input[type=text]:focus, input[type=email]:focus {
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
     border: 1px solid rgb(155, 155, 155);
 }
 
@@ -79,9 +79,10 @@ input[type=text]:focus, input[type=email]:focus {
     border-radius: 5px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1);
     border: none;
-    background-color: rgb(240, 240, 240);
+    background-color: rgba(241, 241, 241, 0.849);
     cursor: pointer;
     margin-top: 10px;
+    font-size: 16px;
 }
 
 #login {
@@ -91,64 +92,65 @@ input[type=text]:focus, input[type=email]:focus {
     transform: skewX(10deg);
 }
 
-#password {
-    border-radius: 5px 0px 0px 5px;
-}
-
 a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.5);
 }
 
-.formDiv .password {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
+/* https://uiverse.io/Yaya12085/evil-chipmunk-15 */
 
-.formDiv password input[type=button] {
-    all: unset;
-    width: 40px;
-    height: 33px;
-    cursor: pointer;
+.password-container {
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url('../../Icons/visibility.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: rgb(252, 252, 252);
+    height: 2.8rem;
+    width: 90%;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
 }
-
-.password {
-    display: flex;
-    justify-content: center;
-    height: 35px;
+  
+.password-container input {
+    height: 100%;
     width: 100%;
-    box-sizing: border-box;
-}
-
-.input {
-    font-size: 17px;
-    color: black;
-    border: none;
-    border-radius: 5px 0px 0px 5px;
-    padding: 8px;
-    box-sizing: border-box;
-}
-
-.button {
-    border: none;
-    text-decoration: none;
-    font-size: 17px;
-    color: black;
-    cursor: pointer;
-    box-sizing: border-box;
-    width: 50px;
-    height: 36px;
-}
-
-.input:focus {
+    border-radius: 8px;
+    background-color: transparent;
+    padding: 0.625rem 70px 0.625rem 0.75rem;
+    font-size: 1.35rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
     outline: none;
+    transition: all .15s cubic-bezier(0.4, 0, 0.2, 1);
+}
+  
+.password-container input:focus {
+    border: 1px solid rgb(155, 155, 155);
+}
+  
+.password-btn {
+    position: absolute;
+    width: 65px;
+    right: 4px;
+    top: 4px;
+    bottom: 4px;
+    z-index: 10;
+    border-radius: 4px;
+    background-color: rgb(216, 216, 216);
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: none;
+    transition: .6s ease;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+}
+
+.header {
+    font-size: 23px;
 }
