--- a/css/dark-mode css/dark-mode profile.css
+++ b/css/dark-mode css/dark-mode profile.css
@@ -76,12 +76,12 @@ body {
     justify-content: center;
     align-items: center;
     position: fixed;
-    gap: 20px;
+    gap: 50px;
 }
 
 .link-size {
-    width: 100%;
-    height: 100%;
+  width: 50px;
+  height: 50px;
 }
 
 .main {
