--- a/css/light-mode css/light-comment.css
+++ b/css/light-mode css/light-comment.css
@@ -277,7 +277,7 @@ body {
     overflow: hidden;
   }
   
-  .left-icons {
+.left-icons {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -285,13 +285,22 @@ body {
     align-items: center;
     position: fixed;
     gap: 50px;
+}
+
+.left-icons hr {
+    width: 50px;
+    max-width: 70%;
+    height: 2px;
+    background-color: #000000;
+    border: 0px solid black;
+    transition: background-color 0.3s ease;
   }
   
   .link-size {
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
   }
-  
+
   .main {
     grid-area: main;
     background-color: #f0f0f0;
@@ -302,7 +311,7 @@ body {
     align-items: flex-start;
   }
   
-  .left-icons .material-symbols-outlined {
+.left-icons .material-symbols-outlined {
     font-size: 35px;
     display: flex;
     justify-content: center;
@@ -311,17 +320,18 @@ body {
     height: 50px;
     transition: background-color 0.5s ease, color 0.3s ease;
     overflow: hidden;
-  }
-  
-  .left-icons .material-symbols-outlined:hover {
+    outline: none;
+}
+
+.left-icons .material-symbols-outlined:hover {
     background-color: rgba(0, 0, 0, 0.1);
     width: 50px;
     cursor: pointer;
-  }
-  
-  /* Tooltip szöveg */
-  .left-icons .material-symbols-outlined::after {
-    content: attr(data-tooltip); /* A data-tooltip attribútum felhasználása a hovernek szükséges szövegnek */
+}
+
+/* Tooltip szöveg */
+.left-icons .material-symbols-outlined::after {
+    content: attr(data-tooltip);
     position: absolute;
     left: 100%;
     background-color: #000000;
@@ -329,16 +339,16 @@ body {
     padding: 5px 10px;
     border-radius: 4px;
     font-size: 14px;
-    white-space: nowrap; /* A szöveg letiltása a wrappeléstől */
-    opacity: 0; /* A szöveg eltüntetése alapból */
-    pointer-events: none; /* A tooltip letiltása a hover letiltásáról */
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
     transition: opacity 0.3s ease;
     margin-left: 10px;
-  }
-  
-  .left-icons .material-symbols-outlined:hover::after {
-    opacity: 1;/* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
-  }
+}
+
+.left-icons .material-symbols-outlined:hover::after {
+    opacity: 1;
+}
 
 .userPosts {
     background-color: rgb(226, 226, 226);
