--- a/css/dark-mode css/loginform.css
+++ b/css/dark-mode css/loginform.css
@@ -16,6 +16,7 @@ nav {
     box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     z-index: 2;
+    position: relative;
 }
 
 body {
