--- a/css/light-mode css/light-mode profile.css
+++ b/css/light-mode css/light-mode profile.css
@@ -221,12 +221,6 @@ input[type=text]{
 body {
   margin: 0;
   height: 100vh;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-  grid-template-rows: 50px 1fr;
-  grid-template-areas:
-      "top-left top"
-      "left main";
   font-family: "Roboto", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -237,70 +231,42 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
 }
 
-body:has(.left.expanded) {
-  grid-template-columns: 200px 1fr;
-}
-
-.top-left {
-  grid-area: top-left;
-  background-color: #ffffff;
-  z-index: 2;
-  transition: background-color 0.3s ease;
-}
-
-.top {
-  grid-area: top;
-  background-color: #ffffff;
-  box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.top h1 {
-  color: #000000;
-  margin: 0;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.left {
-  grid-area: left;
-  background-color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  gap: 20px;
-  box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.left-icons {
-  display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  height: 50px;
+  background-color: white;
+  box-shadow: 10px 0 15px rgba(0, 0, 0, 0.1) !important; 
+}
+
+nav .left-icons {
+  display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
   gap: 50px;
 }
 
-.left-icons hr {
+.left-icons .material-symbols-outlined {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
-  max-width: 70%;
-  height: 2px;
-  background-color: #000000;
-  border: 0px solid black;
-  transition: background-color 0.3s ease;
+  height: 50px;
+  transition: background-color 0.5s ease, color 0.3s ease;
+  overflow: hidden;
+}
+
+.left-icons .material-symbols-outlined:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 50px;
+  cursor: pointer;
+}
+
+.searchIcon {
+  display: none;
 }
 
 .link-size {
@@ -316,44 +282,6 @@ body:has(.left.expanded) {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-}
-
-.left-icons .material-symbols-outlined {
-  font-size: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 50px;
-  transition: background-color 0.5s ease, color 0.3s ease;
-  overflow: hidden;
-}
-
-.left-icons .material-symbols-outlined:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-  width: 50px;
-  cursor: pointer;
-}
-
-/* Tooltip szöveg */
-.left-icons .material-symbols-outlined::after {
-  content: attr(data-tooltip); /* A data-tooltip attribútum felhasználása a hovernek szükséges szövegnek */
-  position: absolute;
-  left: 100%;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 14px;
-  white-space: nowrap; /* A szöveg letiltása a wrappeléstől */
-  opacity: 0; /* A szöveg eltüntetése alapból */
-  pointer-events: none; /* A tooltip letiltása a hover letiltásáról */
-  transition: opacity 0.3s ease;
-  margin-left: 10px;
-}
-
-.left-icons .material-symbols-outlined:hover::after {
-  opacity: 1;/* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
 }
 
 .PostDiv {
