--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -285,7 +285,6 @@ nav .left-icons {
   height: 100%;
   display: grid;
   grid-template-columns: 840px minmax(240px, auto);
-
 }   
 
 .Posts {
@@ -966,7 +965,7 @@ nav .left-icons {
 }
 
 .format-btn:hover {
-  background: #eee;
+    background: #eee;
 }
 
 .font-size {
@@ -1033,18 +1032,58 @@ a {
 }
 
 /* Media query for mobile screens */
-@media screen and (max-width: 600px) {
-  #largerContainer {
+@media screen and (max-width: 1160px) {
+  body {
+    width: 100%;
+    background-color: #f0f0f0;
+  }
+  .main {
+    padding: 15px;
+  }
+  .PostDiv {
+    display: grid;
+    grid-template-columns: auto;
+  }
+  #navSpan {
     display: none;
   }
-
-  #phoneContainer {
-    display: block;
+  nav {
+    width: 100%;
+  }
+  nav .left-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .userFeed {
+    display: none;
+  }
+  .Posts {
+    width: 100%;
+    height: 100%;
+  }
+  .postText {
+    text-align: justify;
   }
 }
 
 .searchIcon {
-   display: none;
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .searchIcon {
+    display: inline-block;
+    margin: 0 8px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .searchIcon {
+    display: inline-block;
+    margin: 0 6px;
+  }
 }
 
 .recentSpan {
