--- a/css/light/comments.css
+++ b/css/light/comments.css
@@ -235,7 +235,7 @@ nav {
   flex-direction: column;
   flex-wrap: wrap;
   height: 50px;
-  background-color: white;
+  background-color: white   ;
   box-shadow: 10px 0 15px rgba(0, 0, 0, 0.1) !important;
   z-index: 1;
 }
@@ -298,9 +298,9 @@ nav .left-icons {
   background-color: rgb(211, 211, 211);
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   transition: background-color 0.3s ease;
+  border-radius: 5px;
 }
 
 .userFeed  {
@@ -404,7 +404,6 @@ transition: background-color 0.2s;
 }
 
 .information {
-  margin-top: 15px; 
   text-align: justify;
   align-items: center;
   display: flex; 
@@ -428,10 +427,10 @@ transition: background-color 0.2s;
 
 .userPosts hr {
   border: none;
-  background-color: rgba(0, 0, 0, 0.05); 
+  background-color: rgba(0, 0, 0, 0.2); 
   height: 1px; 
   width: 100%;
-  margin: 50px 0px 20px 0px;
+  margin: 20px 0px 20px 0px;
 }
 
 .hours {
@@ -478,7 +477,7 @@ gap: 5px
 
 .underComments hr {
   border: none;
-  background-color: rgba(0, 0, 0, 0.05); 
+  background-color: rgba(0, 0, 0, 0.2); 
   height: 1px; 
   width: calc(100% - 4%); /* Adjust width to account for margins */
   margin: 20px 2% 0 2%;
@@ -658,6 +657,12 @@ gap: 5px
     justify-content: center;
     align-items: center;
     background-color: rgba(175, 175, 175, 0.4);
+  }
+  .userPostInfo {
+    gap: 5px;
+  }
+  .information {
+    gap: 5px;
   }
 }
 
