--- a/css/dark/comments.css
+++ b/css/dark/comments.css
@@ -338,7 +338,7 @@ nav .left-icons {
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');
 }
 
 .head {
@@ -465,7 +465,7 @@ transition: background-color 0.2s;
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');
 }
 
 .underComments .post .username {
