--- a/css/dark/profile.css
+++ b/css/dark/profile.css
@@ -213,7 +213,6 @@
   
 input[type=text]{
   background-color: rgb(24, 24, 24);
-  background-image: url();
   background-position: 10px 10px; 
   background-repeat: no-repeat;
 }
@@ -346,7 +345,7 @@ nav .left-icons {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    background-image: url('../../jonkler.webp');
+    background-image: url('../../imgs/jonkler.webp');    
 }
 
 .postUsername {
@@ -603,7 +602,7 @@ nav .left-icons {
   z-index: 2;
   grid-row: 2/4;
   grid-column: 4/6;
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -679,7 +678,7 @@ nav .left-icons {
 }
 
 .userProfilePicture {
-  background-image: url('../../jonkler.webp'); 
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
@@ -732,7 +731,7 @@ nav .left-icons {
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');    
   border-radius: 100%;
   overflow: hidden; /* A divből való "kifolyás" blokkolása */
   border: 2px solid rgb(255, 255, 255);
@@ -895,7 +894,7 @@ nav .left-icons {
 }
 
 .recentPostPfp {
-  background-image: url('../../jonkler.webp'); 
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
@@ -959,4 +958,167 @@ nav .left-icons {
   outline: none;
   max-height: 55px;
   display: block;
+}
+
+.recentSpan {
+  margin-top: 20px;
+}
+
+.searchIcon {
+  display: none;
+}
+
+#SearchDiv {
+  display: none;
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0 10px 15px 0 15px rgba(0, 0, 0, 0.1) !important;
+  background: white;
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+}
+
+#SearchDiv.active {
+    display: flex;
+}
+
+@media screen and (max-width: 1160px) {
+  body {
+    width: 100%;
+  }
+
+  .main {
+    padding: 15px;
+    height: 100%;
+  }
+
+  .PostDiv {
+    display: grid;
+    grid-template-columns: auto;
+    height: 100%;
+  }
+
+  #navSpan {
+    display: none;
+  }
+
+  nav {
+    width: 100%;
+    box-shadow: none;
+  }
+
+  nav .left-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .userFeed {
+    display: none;
+  }
+
+  .Posts {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background-color: transparent;
+  }
+
+  .Post {
+    padding: 20px;
+    box-shadow: none;
+  }
+
+  .userPostInfo {
+    gap: 5px;
+  }
+
+  .postText {
+    text-align: justify;
+  }
+
+  .SearchDiv {
+    display: none;
+    justify-content: center;
+    padding: 5px;
+    z-index: 2;
+  }
+
+  .SearchDiv.active {
+    display: none;
+  }
+
+  ::placeholder {
+    color: black;
+  }
+
+  .navSearchBar {
+    display: flex;
+    justify-content: center;
+    height: 35px;
+    width: 300px; /* Ensure it takes the full width of its container */
+    box-sizing: border-box; /* Include padding and border in the element's total width */
+  }
+  
+  .navSearchBar .input {
+    font-size: 17px;
+    color: black;
+    border: none;
+    border-top-left-radius: .5em;
+    border-bottom-left-radius: .5em;
+    padding: 8px; /* Add padding for better spacing */
+    box-sizing: border-box; /* Include padding in the element's total width */
+    width: calc(100% - 50px); /* Adjust width to account for the button */
+    background-color: rgb(200, 200, 200, 0.3);
+  }
+  
+  .navSearchBar .button {
+    border: none;
+    text-decoration: none;
+    padding: 8px 15px; /* Adjust padding for better spacing */
+    font-size: 17px;
+    color: black;
+    border-top-right-radius: .5em;
+    border-bottom-right-radius: .5em;
+    cursor: pointer;
+    box-sizing: border-box; /* Include padding in the element's total width */
+    width: 50px; /* Fixed width for the button */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(175, 175, 175, 0.4);
+  }
+}
+
+@media screen and (max-width: 1160px) {
+  .searchIcon {
+      display: block;
+  }
+}
+
+@media screen and (min-width: 1161px) {
+  .searchIcon {
+      display: none;
+  }
+  #SearchDiv {
+    display: none;
+    visibility: collapse;
+    margin: 0;
+    padding: 0;
+  }
+  .navSearchBar {
+    display: none;
+  }
+  .userStatistics {
+    display: none;
+  }
+  #smallScreenHr {
+    display: none;
+  }
+  .middleInformation {
+    transform: translateY(-90px);
+  }
 }
