--- a/css/light/comments.css
+++ b/css/light/comments.css
@@ -340,7 +340,7 @@ nav .left-icons {
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');
 }
 
 .head {
@@ -452,7 +452,7 @@ transition: background-color 0.2s;
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');
 }
 
 .underComments .post .username {
