--- a/css/light/dashboard.css
+++ b/css/light/dashboard.css
@@ -350,7 +350,7 @@ nav .left-icons {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    background-image: url('../../jonkler.webp');
+    background-image: url('../../imgs/jonkler.webp');    
 }
 
 .postUsername {
@@ -621,7 +621,7 @@ nav .left-icons {
   z-index: 2;
   grid-row: 2/4;
   grid-column: 4/6;
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -697,7 +697,7 @@ nav .left-icons {
 }
 
 .userProfilePicture {
-  background-image: url('../../jonkler.webp'); 
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
@@ -750,7 +750,7 @@ nav .left-icons {
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
-  background-image: url('../../jonkler.webp');
+  background-image: url('../../imgs/jonkler.webp');    
   border-radius: 100%;
   overflow: hidden; /* A divből való "kifolyás" blokkolása */
   border: 2px solid black;
@@ -913,7 +913,7 @@ nav .left-icons {
 }
 
 .recentPostPfp {
-  background-image: url('../../jonkler.webp'); 
+  background-image: url('../../imgs/jonkler.webp');    
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
